manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fournos
  namespace: psap-automation
  labels:
    app: fournos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fournos
  template:
    metadata:
      labels:
        app: fournos
    spec:
      serviceAccountName: fournos
      containers:
        - name: fournos
          image: quay.io/rh_perfscale/fournos:latest
          ports:
            - containerPort: 8000
              name: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 1000m
              memory: 512Mi
            limits:
              cpu: 1500m
              memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: fournos
  namespace: psap-automation
  labels:
    app: fournos
spec:
  selector:
    app: fournos
  ports:
    - port: 8000
      targetPort: http
      name: http

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fournos
  namespace: psap-automation
spec:
  to:
    kind: Service
    name: fournos
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
